--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,9 @@
 spring.application.name=ApiAuth
 
+jwt.public.key=classpath:app.pub
+jwt.private.key=classpath:app.key
+
+
 spring.sql.init.mode=always
 
 spring.jpa.hibernate.ddl-auto=update
